--- a/nicepage.css
+++ b/nicepage.css
@@ -4,6 +4,18 @@
  * Copyright 2014-2021 Froala Labs
  */
 
+html, body {
+  // Smooth scroll always for html tag
+  scroll-behavior: smooth;
+  // scroll-snap-type: y; // <-- snap in y axis
+}
+
+// mobile 
+@media (max-width: 800px) {
+  html, body {
+  overflow-x: hidden;
+  }
+}
 .fr-clearfix::after {
   clear: both;
   display: block;
